--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <!-- Invullen: de titel van de standaard of het document - - - - - - - - - - - - - - - - - - -->
-        <title>[ Naam van het document ]</title>    
+        <title>Scopedocument Klimaatadaptatie</title>    
 
         <!-- Kan hier een 'ondertitel' tag worden gemaakt? -->
 		
@@ -47,14 +47,14 @@
         <!-- voor een nieuw hoofdstuk kopieer je een regel, en voegt die toe - - - - - - - - - - - - -->
         <!--
         -->
-	    <div     data-format="markdown" data-include="Versiebeheer.md"></div>	
-        <section data-format="markdown" data-include="Inleiding.md"></section>
-        <section data-format="markdown" data-include="Analyse.md"></section>
-        <section data-format="markdown" data-include="Keuzes.md"></section>
-        <section data-format="markdown" data-include="Expertsessies.md"></section>
-        <section data-format="markdown" data-include="Informatiemodel.md"></section>
-        <section data-format="markdown" data-include="ConclusiesAanbevelingen.md"></section>
-        <section data-format="markdown" data-include="Bijlagen.md"></section>
+        <section data-format="markdown" data-include="Inleiding.md" id="inleiding"></section>
+        <section data-format="markdown" data-include="Werkproces.md" id="werkproces"></section>
+        <section data-format="markdown" data-include="Stakeholders.md" id="stakeholders"></section>
+        <section data-format="markdown" data-include="Software.md" id="software"></section>
+        <section data-format="markdown" data-include="Wettelijk-kader.md" id="wettelijkkader"></section>
+        <section data-format="markdown" data-include="Standaarden.md" id="standaarden"></section>
+        <section data-format="markdown" data-include="Keuzes.md" id="keuzes"></section>
+        <section data-format="markdown" data-include="Aanpak.md" id="aanpak"></section>
         
         <!-- genereer hier een afbeeldingen lijst- - - - - - - - - - - - - - - - - - - - - - - - - - -->
         <!--<section id="tof"><h2>Lijst van afbeeldingen</h2></section> -->
