--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!--
         -->
         <section data-format="markdown" data-include="Inleiding.md" id="inleiding"></section>
-	<section data-format="markdown" data-include="Inleiding.md" id="inhoud"></section>
+	<section data-format="markdown" data-include="Inhoud.md" id="inhoud"></section>
 	<section data-format="markdown" data-include="Wettelijk-kader.md" id="wettelijkkader"></section>
         <section data-format="markdown" data-include="Werkproces.md" id="werkproces"></section>
         <section data-format="markdown" data-include="Stakeholders.md" id="stakeholders"></section>
