--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<section data-format="markdown" data-include="Inhoud.md" id="inhoud"></section>
 	<section data-format="markdown" data-include="Wettelijk-kader.md" id="wettelijkkader"></section>
         <section data-format="markdown" data-include="Werkproces.md" id="werkproces"></section>
-	<section data-format="markdown" data-include="Software.md" id="software"></section>
+	<section data-format="markdown" data-include="Tools.md" id="tools"></section>
         <section data-format="markdown" data-include="Stakeholders.md" id="stakeholders"></section>
         <section data-format="markdown" data-include="Standaarden.md" id="standaarden"></section>
         <section data-format="markdown" data-include="Keuzes.md" id="keuzes"></section>
