--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section data-format="markdown" data-include="Stakeholders.md" id="stakeholders"></section>
         <section data-format="markdown" data-include="Standaarden.md" id="standaarden"></section>
         <section data-format="markdown" data-include="Keuzes.md" id="keuzes"></section>
-        <section data-format="markdown" data-include="Aanpak.md" id="aanpak"></section>
+        <!-- <section data-format="markdown" data-include="Aanpak.md" id="aanpak"></section> -->
         <!-- genereer hier een afbeeldingen lijst- - - - - - - - - - - - - - - - - - - - - - - - - - -->
         <!--<section id="tof"><h2>Lijst van afbeeldingen</h2></section> -->
     </body>
